# finance-ai

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.http.yml  main.py  mcp_http_server.py  mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py  test_mcp_tools.py  ui.py
agents/: goal_agent.py  market_agent.py  news_agent.py  portfolio_agent.py  portfolio_visualizations.py  qa-agent.py  qa_agent.py  router_agent.py  router_agent_gradio_ui.py  router_agent_v2.py  tax-agent.py  tax_agent.py  tax_agent_gradio_ui.py
docs/: README.md  api.md  architecture.md  development.md  mcp_http_deployment.md  setup.md  troubleshooting.md  usage.md
rag/: vector_db_loader.py
tests/: __init__.py  conftest.py  test_context_aware_routing.py  test_guardrails.py  test_market_agent.py  test_mcp_cache.py  test_portfolio_agent.py  test_portfolio_visualizations.py  test_router.py  test_ticker.py
utils/: __init__.py  mcp_cache.py  ticker_utils.py
