[project]
name = "cap-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=7.0.5",
    "dotenv>=0.9.9",
    "gradio>=0.5.4",
    "httpx>=0.27.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "mcp>=1.0.0",
    "plotly>=6.5.2",
    "starlette>=0.40.0",
    "tavily>=1.1.0",
    "uvicorn>=0.30.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "types-cachetools>=6.2.0.20251022",
]
